syntax = "proto3";

package app.v1;

option go_package = "proto";

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

service UserService {
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

service BillingService {
    rpc ListInvoices (ListInvoicesRequest) returns (ListInvoicesResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    int64 user_id = 2;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
    int64 user_id = 2;
}

message GetUserRequest {
    int64 user_id = 1;
}

message GetUserResponse {
    User user = 1;
}

message User {
    int64 id = 1;
    string name = 2;
    string email = 3;
}

message ListInvoicesRequest {
    int64 user_id = 1;
}

message ListInvoicesResponse {
    repeated Invoice invoices = 1;
}

message Invoice {
    int64 id = 1;
    int64 user_id = 2;
    double amount = 3;
    string currency = 4;
}